--- a/plugins/result_check_plugin/templates/form/adjust/adjust_edit.html
+++ b/plugins/result_check_plugin/templates/form/adjust/adjust_edit.html
@@ -37,6 +37,10 @@
     .m-0 {
         margin : 0rem;
     }
+    .thead-highlight {
+    background-color: #f0f0f0 !important; /* 연한 회색 (HEX 코드) */
+    color: #333; /* 텍스트 색상을 진하게 유지 */
+    }
 </style>
 
 <div class="row">
@@ -95,7 +99,7 @@
         
             <div>
                 <div class="panel-body nav-bd-border">
-                    <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+                    <div class="panel-group" id="accordion" aria-multiselectable="true">
 
                     </div>
                 </div>
