--- a/plugins/form_manage_plugin/templates/form/block_dictionary/block_dictionary_add.html
+++ b/plugins/form_manage_plugin/templates/form/block_dictionary/block_dictionary_add.html
@@ -8,9 +8,9 @@
 <form method="post" action="{{ url_for(modelview_name + '.add') }}">
 <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
   <div class="form-group">
-    <label>서식명</label>
+    <label>{{_("문서명")}}</label>
     <select id="doc_id" name="doc_id" class="form-control" required>
-      <option value="">서식을 선택하세요</option>
+      <option value="">문서를 선택하세요</option>
       {% for doc in doc_list %}
       <option value="{{ doc.id }}">{{ doc.name }}</option>
       {% endfor %}
@@ -18,33 +18,33 @@
   </div>
 
   <div class="form-group">
-    <label>레이아웃명</label>
+    <label>{{_("레이아웃명")}}</label>
     <select id="layout_id" name="layout_id" class="form-control" required>
-      <option value="">먼저 서식을 선택하세요</option>
+      <option value="">먼저 문서를 선택하세요</option>
     </select>
   </div>
 
   <div class="form-group">
-    <label>섹션명</label>
+    <label>{{_("구역명")}}</label>
     <select id="section_id" name="section_id" class="form-control" required>
       <option value="">먼저 레이아웃을 선택하세요</option>
     </select>
   </div>
 
   <div class="form-group">
-    <label>블록 (행/열)</label>
+    <label>{{_("블록 행/열")}}</label>
     <select id="block_id" name="block_id" class="form-control" required>
       <option value="">먼저 섹션을 선택하세요</option>
     </select>
   </div>
 
   <div class="form-group">
-    <label>교정 대상 단어</label>
+    <label>{{_("교정 대상 텍스트")}}</label>
     <input type="text" class="form-control" name="error_text" required>
   </div>
 
   <div class="form-group">
-    <label>교정 단어</label>
+    <label>{{_("교정 텍스트")}}</label>
     <input type="text" class="form-control" name="crrct_text" required>
   </div>
 
