--- a/plugins/form_manage_plugin/templates/form/block_dictionary/block_dictionary_list.html
+++ b/plugins/form_manage_plugin/templates/form/block_dictionary/block_dictionary_list.html
@@ -22,9 +22,9 @@
                 <div class="row" style="width:100%; margin:0;">
                     <div class="col-md-10">
                         <div class="form-group" style="margin-right:10px; margin-bottom:5px;">
-                            <label style="margin-right:5px;">서식명</label>
+                            <label style="margin-right:5px;">{{_("문서명")}}</label> 
                             <select id="doc_id" name="doc_id" class="form-control">
-                                <option value="">전체</option>
+                                <option value="">{{_("전체")}}</option>
                                 {% for doc in doc_list %}
                                 <option value="{{ doc.id }}" {% if request.args.get('doc_id') == doc.id|string %}selected{% endif %}>{{ doc.name }}</option>
                                 {% endfor %}
@@ -32,9 +32,9 @@
                         </div>
 
                         <div class="form-group" style="margin-right:10px; margin-bottom:5px;">
-                            <label style="margin-right:5px;">레이아웃명</label>
+                            <label style="margin-right:5px;">{{_("레이아웃명")}}</label>
                             <select id="layout_id" name="layout_id" class="form-control">
-                                <option value="">전체</option>
+                                <option value="">{{_("전체")}}</option>
                                 {% for layout in layout_list %}
                                 <option value="{{ layout.id }}" {% if request.args.get('layout_id') == layout.id|string %}selected{% endif %}>{{ layout.name }}</option>
                                 {% endfor %}
@@ -42,9 +42,9 @@
                         </div>
 
                         <div class="form-group" style="margin-right:10px; margin-bottom:5px;">
-                            <label style="margin-right:5px;">섹션명</label>
+                            <label style="margin-right:5px;">{{_("구역명")}}</label>
                             <select id="section_id" name="section_id" class="form-control">
-                                <option value="">전체</option>
+                                <option value="">{{_("전체")}}</option>
                                 {% for sec in section_list %}
                                 <option value="{{ sec.id }}" {% if request.args.get('section_id') == sec.id|string %}selected{% endif %}>{{ sec.name }}</option>
                                 {% endfor %}
@@ -52,18 +52,18 @@
                         </div>
 
                         <div class="form-group" style="margin-right:10px; margin-bottom:5px;">
-                            <label style="margin-right:5px;">교정대상단어</label>
+                            <label style="margin-right:5px;">{{_("교정 대상 텍스트")}}</label>
                             <input type="text" name="error_text" class="form-control" value="{{ request.args.get('error_text','') }}">
                         </div>
 
                         <div class="form-group" style="margin-right:10px; margin-bottom:5px;">
-                            <label style="margin-right:5px;">교정단어</label>
+                            <label style="margin-right:5px;">{{_("교정 텍스트")}}</label>
                             <input type="text" name="crrct_text" class="form-control" value="{{ request.args.get('crrct_text','') }}">
                         </div>
                     </div>
                     <div class="col-md-2 text-right">
-                        <button type="submit" class="btn btn-primary">검색</button>
-                        <a href="{{ url_for(modelview_name + '.list') }}" class="btn btn-default">초기화</a>
+                        <button type="submit" class="btn btn-primary">{{_("검색")}}</button>
+                        <a href="{{ url_for(modelview_name + '.list') }}" class="btn btn-default">{{_("초기화")}}</a>
                     </div>
                 </div>
             </form>
