--- a/plugins/form_manage_plugin/templates/form/layout/layout_block_edit.html
+++ b/plugins/form_manage_plugin/templates/form/layout/layout_block_edit.html
@@ -1,6 +1,7 @@
 {% extends "appbuilder/base.html" %}
 {% import 'appbuilder/general/lib.html' as lib %}
 {% import 'form/layout/js/layout_block_edit_js.html' as js %}
+{% from 'appbuilder/loading_dots.html' import loading_dots %}
 
 {% block content %}
 {{ lib.panel_begin(title) }}
@@ -179,6 +180,21 @@
             </div>
         </div>
     </form>
+</div>
+
+<div class="modal fade" id="loadingModal" tabindex="-1" data-backdrop="static" data-keyboard="false">
+    <div class="modal-dialog modal-sm" style="margin-top: 200px;">
+        <div class="modal-content">
+            <div class="modal-body text-center">
+                <span style="font-size: 24px;"> {{ loading_dots(id='loading-modal-dots') }}
+                </span>
+                <h4 class="mt-3">
+                    처리중입니다...
+                </h4>
+                <p class="text-muted">잠시만 기다려주세요.</p>
+            </div>
+        </div>
+    </div>
 </div>
 {{ js.content() | safe }}
 {% endblock %}
